src/test/deca/context/invalid/class/invalid_override_method_return.deca
// Description:
//    Test of a a method that override a super class method with a different signature
//    Test rule 2.7
//
// Result:
// [Begin Result]
//invalid_override_method_return.deca:20:10: Redefined method myMethod's return type must be a subtype of the inherited method's return type. Rule 2.7.
// [End Result]
//
// History:
//    created on 12/01/2025

class MySuperClass{
    int myMethod(int a){
        return a;
    }
}

class MyClass extends MySuperClass{
    float myMethod(int a){
        return true;
    }
}

{
    //empty main
}
